# qwen-asr

./: .gitignore  Makefile  PYTHON_API.md  README.md  pyproject.toml  qwen_asr.c
qwen_asr/: __init__.py  api.py
tests/: __init__.py  conftest.py  test_config.py  test_constants.py  test_exceptions.py  test_model.py  test_result.py  test_transcription.py
